--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="instructions">Press the button for a delicious joke!</string>
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <!--updated-->
+    <string name="banner_ad_unit_id">ca-app-pub-6076864297699362/6444058690</string>
+    <string name="google_play_services_version">ca-app-pub-6076864297699362~3186914931</string>
 </resources>
